--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-systemd (229-3ubuntu2) UNRELEASED; urgency=medium
+systemd (229-3ubuntu2) xenial; urgency=medium
 
   * udev.postinst: Quiesce error message if /sys/class/net/eno* does not
     exist. (LP: #1560112)
@@ -13,7 +13,7 @@ systemd (229-3ubuntu2) UNRELEASED; urgency=medium
     cleanup of "our" cgroup becomes a system-wide killing spree.
     (LP: #1555237)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 22 Mar 2016 08:53:32 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 31 Mar 2016 23:11:19 +0200
 
 systemd (229-3ubuntu1) xenial; urgency=medium
 
