--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+systemd (229-4ubuntu5) UNRELEASED; urgency=medium
+
+  * debian/udev.postinst: Don't fail if /var/log/udev is a directory.
+    (LP: #1574004)
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 24 Apr 2016 20:59:08 +0200
+
 systemd (229-4ubuntu4) xenial; urgency=medium
 
   * 73-special-net-names.rules: Further refine ibmveth naming.
