--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+systemd (229-4ubuntu6) UNRELEASED; urgency=medium
+
+  * Add a DHCP exit hook for pushing received NTP servers into timesyncd.
+    (LP: #1578663)
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 02 May 2016 15:04:42 -0500
+
 systemd (229-4ubuntu5) xenial-proposed; urgency=medium
 
   * debian/udev.postinst: Don't fail if /var/log/udev is a directory.
