--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ systemd (229-4ubuntu7) UNRELEASED; urgency=medium
   * Add activation rate limiting for socket units. (LP: #1568094)
   * Split out udev rule to name USB network interfaces by MAC address into
     73-usb-net-by-mac.rules, so that it's easier to disable. (Closes: #824025)
+  * 73-usb-net-by-mac.rules: Disable when net.ifnames=0 is specified on the
+    kernel command line, to be consistent with disabling the *.link files.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 05 Jun 2016 21:46:07 +0200
 
