--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+systemd (229-4ubuntu7) UNRELEASED; urgency=medium
+
+  * Add pre-dependency to dpkg >= 1.17.14 on udev, to ensure that
+    dpkg-maintscript-helper symlink_to_dir is available. (LP: #1585406)
+
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 05 Jun 2016 21:46:07 +0200
+
 systemd (229-4ubuntu6) xenial-proposed; urgency=medium
 
   * Add a DHCP exit hook for pushing received NTP servers into timesyncd.
