--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+systemd (215-17+deb8u5) UNRELEASED; urgency=medium
+
+  * Use the right timeout for stop processes we fork. This ensures that
+    services are properly killed after a given timeout. (Closes: #813702)
+
+ -- Michael Biebl <biebl@debian.org>  Fri, 01 Jul 2016 17:35:05 +0200
+
 systemd (215-17+deb8u4) stable; urgency=medium
 
   [ Martin Pitt ]
