--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-systemd (229-4ubuntu7) UNRELEASED; urgency=medium
+systemd (229-4ubuntu7) xenial-proposed; urgency=medium
 
   * Add pre-dependency to dpkg >= 1.17.14 on udev, to ensure that
     dpkg-maintscript-helper symlink_to_dir is available. (LP: #1585406)
@@ -11,7 +11,7 @@ systemd (229-4ubuntu7) UNRELEASED; urgency=medium
     the documented way to disable ifnames. (Closes: #824491, LP: #1593379)
   * coredump: Fix "Coredump file descriptor missing". (LP: #1602256)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 05 Jun 2016 21:46:07 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 12 Jul 2016 17:37:25 +0200
 
 systemd (229-4ubuntu6) xenial-proposed; urgency=medium
 
